--- a/ClinicaVeterinaria/Views/Shared/_Layout.cshtml
+++ b/ClinicaVeterinaria/Views/Shared/_Layout.cshtml
@@ -136,6 +136,11 @@
                             </li>
                             }
                         }
+
+                        <li class="nav-item ms-auto">
+                            <a class="navlink text-light" asp-action="Index" asp-controller="Carrello">Carrello</a>
+                        </li>
+
                     </ul>
                 </div>
             </div>
