--- a/ClinicaVeterinaria/Views/Animali/Delete.cshtml
+++ b/ClinicaVeterinaria/Views/Animali/Delete.cshtml
@@ -73,7 +73,7 @@
     </dl>
     
     <form asp-action="Delete">
-        <input type="hidden" asp-for="Idanimale" />
+        <input type="hidden" asp-for="IdAnimale" />
         <input type="submit" value="Elimina" class="btn btn-danger" />
         <a class="btn btn-outline-info me-2" asp-action="Index">Lista Animali</a>
     </form>
