--- a/ClinicaVeterinaria/Views/Animali/Edit.cshtml
+++ b/ClinicaVeterinaria/Views/Animali/Edit.cshtml
@@ -11,7 +11,7 @@
     <div class="col-md-4">
         <form asp-action="Edit" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Idanimale" />
+            <input type="hidden" asp-for="IdAnimale" />
 
             <div class="form-group mb-3">
                 <label asp-for="FotoAnimale" class="control-label"></label>
