--- a/ClinicaVeterinaria/Views/Ricoveri/Delete.cshtml
+++ b/ClinicaVeterinaria/Views/Ricoveri/Delete.cshtml
@@ -50,7 +50,7 @@
             @Html.DisplayNameFor(model => model.IdanimaleNavigation)
         </dt>
         <dd class="col-sm-10 mb-3">
-            @Html.DisplayFor(model => model.IdanimaleNavigation.Idanimale)
+            @Html.DisplayFor(model => model.IdanimaleNavigation.IdAnimale)
         </dd>
     </dl>
     
