--- a/ClinicaVeterinaria/Views/Veterinario/Index.cshtml
+++ b/ClinicaVeterinaria/Views/Veterinario/Index.cshtml
@@ -40,7 +40,7 @@
                 @Html.DisplayFor(modelItem => item.DescrizioneCura)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.IdAnimaleNavigation.Idanimale)
+                @Html.DisplayFor(modelItem => item.IdAnimaleNavigation.IdAnimale)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.IdVisita">Edit</a> |
