--- a/ClinicaVeterinaria/Views/Visite/Index.cshtml
+++ b/ClinicaVeterinaria/Views/Visite/Index.cshtml
@@ -45,7 +45,7 @@
                 @Html.DisplayFor(modelItem => item.DescrizioneCura)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.IdAnimaleNavigation.Idanimale)
+                @Html.DisplayFor(modelItem => item.IdAnimaleNavigation.IdAnimale)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.PrezzoVisita)
