--- a/ClinicaVeterinaria/Views/Ricoveri/Details.cshtml
+++ b/ClinicaVeterinaria/Views/Ricoveri/Details.cshtml
@@ -49,7 +49,7 @@
             @Html.DisplayNameFor(model => model.IdanimaleNavigation)
         </dt>
         <dd class="col-sm-10 mb-3">
-            @Html.DisplayFor(model => model.IdanimaleNavigation.Idanimale)
+            @Html.DisplayFor(model => model.IdanimaleNavigation.IdAnimale)
         </dd>
     </dl>
 </div>
