--- a/ClinicaVeterinaria/Views/Visite/Delete.cshtml
+++ b/ClinicaVeterinaria/Views/Visite/Delete.cshtml
@@ -32,7 +32,7 @@
             @Html.DisplayNameFor(model => model.IdAnimaleNavigation)
         </dt>
         <dd class="col-sm-10 mb-3">
-            @Html.DisplayFor(model => model.IdAnimaleNavigation.Idanimale)
+            @Html.DisplayFor(model => model.IdAnimaleNavigation.IdAnimale)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.PrezzoVisita)
