--- a/ClinicaVeterinaria/Views/Home/Index.cshtml
+++ b/ClinicaVeterinaria/Views/Home/Index.cshtml
@@ -2,10 +2,73 @@
 
 @{
     string actionChiamata = TempData["MiStoRegistrando"] != null && (bool)TempData["MiStoRegistrando"] == true ? "ConcludiRegistrazione" : "Login";
+} *@
+
+
+@{
+    ViewData["Title"] = "Homepage";
+}
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-6 text-center">
+            <div class="jumbotron jumbotron-fluid home">
+                <div class="container">
+                    <h1 class="display-4">Clinica Veterinaria</h1>
+                    <p class="lead">La migliore cura per i tuoi amici a quattro zampe.</p>
+                    <hr class="my-4">
+                    <p>Accedi al tuo account o registrati per usufruire dei nostri servizi.</p>
+                    <p class="lead">
+                        <a class="btn btn-success btn-lg" href="~/Login/Index" role="button">Accedi</a>
+                        <a class="btn btn-info btn-lg" href="~/Login/Registrazione" role="button">Registrati</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <img src="https://www.gedistatic.it/content/gedi/img/huffingtonpost/2018/09/11/161528851-3fb6d08e-31fc-4c3e-9279-54c21493f7bd.jpeg?webp" class="img-fluid" alt="Immagine di presentazione">
+        </div>
+    </div>
+    <div class="row justify-content-around my-5">
+        <div class="col-md-4 farm p-4 mb-4">
+            <div class="d-flex align-items-center">
+                <i class="bi bi-clock fs-4 me-2"></i>
+                <h3 class="mb-0">24/7 Aperti</h3>
+            </div>
+            <p class=" mt-2 mb-0">Siamo aperti 24h ogni giorno così da poterci occupare dei vostri preziosi animali in qualsiasi momento.</p>
+        </div>
+        <div class="col-md-4 vet p-4 mb-4">
+            <div class="d-flex align-items-center">
+                <i class="bi bi-clipboard2-pulse fs-4 me-2"></i>
+                <h3 class="mb-0">Esperienza Professionale</h3>
+            </div>
+            <p class="mt-2 mb-0">Abbiamo il personale più qualificato per dare ai vostri animali le cure e i trattamenti migliori.</p>
+        </div>
+    </div>
+</div>
+
+<div class="contaienr">
+    <div class="row">
+        <div class="col-6">
+            <button id="findAnimalbyMicroChip" class="btn btn-login">Cerca animale per microchip</button>
+            <input id="inputInserisciNumMicro" type="text" />
+            <p id="infoOutput"></p>
+        </div>
+        <div class="col-6">
+            <div id="containerBello"></div>
+        </div>
+    </div>
+</div>
+
+
+@section Scripts {
+
+    <script src="./js/cercaAnimalePerMicrochip.js">
+    </script>
 }
 
 
-<div class="container">
+@* <div class="container">
     <div class="row">
         <div class="col-4">
             @{
@@ -62,111 +125,3 @@
         </div>
     </div>
 </div> *@
-
-
-@model ClinicaVeterinaria.Models.Utenti;
-
-@{
-    string actionChiamata = TempData["MiStoRegistrando"] != null && (bool)TempData["MiStoRegistrando"] == true ? "ConcludiRegistrazione" : "Login";
-}
-
-
-@{
-    ViewData["Title"] = "Homepage";
-}
-
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-md-6 text-center">
-            <div class="jumbotron jumbotron-fluid home">
-                <div class="container">
-                    <h1 class="display-4">Clinica Veterinaria</h1>
-                    <p class="lead">La migliore cura per i tuoi amici a quattro zampe.</p>
-                    <hr class="my-4">
-                    <p>Accedi al tuo account o registrati per usufruire dei nostri servizi.</p>
-                    <p class="lead">
-                        <a class="btn btn-success btn-lg" href="#" role="button">Accedi</a>
-                        <a class="btn btn-info btn-lg" href="#" role="button">Registrati</a>
-                    </p>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-6">
-            <img src="https://www.gedistatic.it/content/gedi/img/huffingtonpost/2018/09/11/161528851-3fb6d08e-31fc-4c3e-9279-54c21493f7bd.jpeg?webp" class="img-fluid" alt="Immagine di presentazione">
-        </div>
-    </div>
-    <div class="row justify-content-around my-5">
-        <div class="col-md-4 farm p-4 mb-4">
-            <div class="d-flex align-items-center">
-                <i class="bi bi-clock fs-4 me-2"></i>
-                <h3 class="mb-0">24/7 Aperti</h3>
-            </div>
-            <p class=" mt-2 mb-0">Siamo aperti 24h ogni giorno così da poterci occupare dei vostri preziosi animali in qualsiasi momento.</p>
-        </div>
-        <div class="col-md-4 vet p-4 mb-4">
-            <div class="d-flex align-items-center">
-                <i class="bi bi-clipboard2-pulse fs-4 me-2"></i>
-                <h3 class="mb-0">Esperienza Professionale</h3>
-            </div>
-            <p class="mt-2 mb-0">Abbiamo il personale più qualificato per dare ai vostri animali le cure e i trattamenti migliori.</p>
-        </div>
-    </div>
-</div>
-
-<div class="container">
-    <div class="row">
-        <div class="col-4">
-            @{
-                if (TempData["MiStoRegistrando"] != null && (bool)TempData["MiStoRegistrando"] == true)
-                {
-                    <h1 class="mb-4">Registrazione</h1>
-                }
-                else
-                {
-                    <h1 class="mb-4">Login</h1>
-                }
-            }
-
-            <form asp-action="@actionChiamata" asp-controller="Login">
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div class="form-group mb-3">
-                    <label asp-for="Nome" class="control-label"></label>
-                    <input asp-for="Nome" class="form-control" />
-                    <span asp-validation-for="Nome" class="text-danger"></span>
-                </div>
-
-                @{
-                    if (TempData["MiStoRegistrando"] != null && (bool)TempData["MiStoRegistrando"] == true)
-                    {
-                        <div class="form-group mb-3">
-                            <label asp-for="Cognome" class="control-label"></label>
-                            <input asp-for="Cognome" class="form-control" />
-                            <span asp-validation-for="Cognome" class="text-danger"></span>
-                        </div>
-                    }
-                }
-
-                <div class="form-group mb-3">
-                    <label asp-for="Password" class="control-label"></label>
-                    <input type="password" asp-for="Password" class="form-control" />
-                    <span asp-validation-for="Password" class="text-danger"></span>
-                </div>
-
-                <div class="form-group mb-3">
-
-                    @{
-                        if (TempData["MiStoRegistrando"] != null && (bool)TempData["MiStoRegistrando"] == true)
-                        {
-                            <input type="submit" value="Registrati" class="btn btn-login mt-2" />
-                        }
-                        else
-                        {
-                            <input type="submit" value="Login" class="btn btn-login mt-2" />
-                        }
-                    }
-
-                </div>
-            </form>
-        </div>
-    </div>
-</div>
