--- a/ClinicaVeterinaria/Views/Login/Index.cshtml
+++ b/ClinicaVeterinaria/Views/Login/Index.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="contaienr">
+﻿@* <div class="contaienr">
 	<div class="row">
 		<div class="col-4">
 			
@@ -17,4 +17,69 @@
 	
 	<script src="./js/cercaAnimalePerMicrochip.js">
 	</script>
+} *@
+
+@model ClinicaVeterinaria.Models.Utenti;
+
+@{
+    string actionChiamata = TempData["MiStoRegistrando"] != null && (bool)TempData["MiStoRegistrando"] == true ? "ConcludiRegistrazione" : "Login";
 }
+
+
+<div class="container">
+    <div class="row">
+        <div class="col-4">
+            @{
+                if (TempData["MiStoRegistrando"] != null && (bool)TempData["MiStoRegistrando"] == true)
+                {
+                    <h1 class="mb-4">Registrazione</h1>
+                }
+                else
+                {
+                    <h1 class="mb-4">Login</h1>
+                }
+            }
+
+            <form asp-action="@actionChiamata" asp-controller="Login">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group mb-3">
+                    <label asp-for="Nome" class="control-label"></label>
+                    <input asp-for="Nome" class="form-control" />
+                    <span asp-validation-for="Nome" class="text-danger"></span>
+                </div>
+
+                @{
+                    if (TempData["MiStoRegistrando"] != null && (bool)TempData["MiStoRegistrando"] == true)
+                    {
+                        <div class="form-group mb-3">
+                            <label asp-for="Cognome" class="control-label"></label>
+                            <input asp-for="Cognome" class="form-control" />
+                            <span asp-validation-for="Cognome" class="text-danger"></span>
+                        </div>
+                    }
+                }
+
+                <div class="form-group mb-3">
+                    <label asp-for="Password" class="control-label"></label>
+                    <input type="password" asp-for="Password" class="form-control" />
+                    <span asp-validation-for="Password" class="text-danger"></span>
+                </div>
+
+                <div class="form-group mb-3">
+
+                    @{
+                        if (TempData["MiStoRegistrando"] != null && (bool)TempData["MiStoRegistrando"] == true)
+                        {
+                            <input type="submit" value="Registrati" class="btn btn-login mt-2" />
+                        }
+                        else
+                        {
+                            <input type="submit" value="Login" class="btn btn-login mt-2" />
+                        }
+                    }
+
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
