--- a/ClinicaVeterinaria/Views/Ricoveri/Index.cshtml
+++ b/ClinicaVeterinaria/Views/Ricoveri/Index.cshtml
@@ -63,9 +63,9 @@
                 @Html.DisplayFor(modelItem => item.IdanimaleNavigation.IdAnimale)
             </td>
             <td>
-                <a class="btn btn-info me-2" asp-action="Edit" asp-route-id="@item.IdRicovero">Modifica</a>
-                <a class="btn btn-outline-info me-2" asp-action="Details" asp-route-id="@item.IdRicovero">Dettagli</a>
-                <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.IdRicovero">Elimina</a>
+                <a class="btn btn-sm btn-info me-2 mb-2" asp-action="Edit" asp-route-id="@item.IdRicovero">Modifica</a>
+                <a class="btn btn-sm btn-outline-info me-2" asp-action="Details" asp-route-id="@item.IdRicovero">Dettagli</a>
+                <a class="btn btn-sm btn-danger" asp-action="Delete" asp-route-id="@item.IdRicovero">Elimina</a>
             </td>
         </tr>
 }
