--- a/ClinicaVeterinaria/Views/Prodotti/Index.cshtml
+++ b/ClinicaVeterinaria/Views/Prodotti/Index.cshtml
@@ -30,9 +30,9 @@
                     <p class="card-text">Medicinale: @item.IsMedicinale</p>
                   @*   <p class="card-text">Possibili Usi: @item.PossibiliUsi</p>
                     <p class="card-text">Fornitore: @item.IdDittaFornitriceNavigation.NomeDitta</p> *@
-                    <a class="btn btn-success me-2" asp-action="Edit" asp-route-id="@item.IdProdotto">Modifica</a>
-                    <a class="btn btn-outline-success me-2" asp-action="Details" asp-route-id="@item.IdProdotto">Dettagli</a>
-                    <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.IdProdotto">Elimina</a>
+                    <a class="btn btn-sm btn-success me-2" asp-action="Edit" asp-route-id="@item.IdProdotto">Modifica</a>
+                    <a class="btn btn-sm btn-outline-success me-2" asp-action="Details" asp-route-id="@item.IdProdotto">Dettagli</a>
+                    <a class="btn btn-sm btn-danger" asp-action="Delete" asp-route-id="@item.IdProdotto">Elimina</a>
                 </div>
             </div>
         </div>
