Prodotti dentro cassetti , alert e view di errore senza prodotto

--- a/ClinicaVeterinaria/Views/Animali/Index.cshtml
+++ b/ClinicaVeterinaria/Views/Animali/Index.cshtml
@@ -29,10 +29,10 @@
 						<p class="card-text">@item.IdUtente</p>
 					</div>
 					<div>
-						<a class="btn btn-info me-2" asp-action="Edit" asp-route-id="@item.Idanimale">Modifica</a>
-						<a class="btn btn-outline-info me-2" asp-action="Details" asp-route-id="@item.Idanimale">Dettagli</a>
-						<a class="btn btn-danger me-2" asp-action="Delete" asp-route-id="@item.Idanimale">Elimina</a>
-						<a class="btn btn-info" asp-action="CronistoriaVisite" asp-controller="Visite" asp-route-id="@item.Idanimale">Cronologia delle Visite</a>
+						<a class="btn btn-info me-2" asp-action="Edit" asp-route-id="@item.IdAnimale">Modifica</a>
+						<a class="btn btn-outline-info me-2" asp-action="Details" asp-route-id="@item.IdAnimale">Dettagli</a>
+						<a class="btn btn-danger me-2" asp-action="Delete" asp-route-id="@item.IdAnimale">Elimina</a>
+						<a class="btn btn-info" asp-action="CronistoriaVisite" asp-controller="Visite" asp-route-id="@item.IdAnimale">Cronologia delle Visite</a>
 					</div>
 				</div>
 			</div>
