--- a/ClinicaVeterinaria/Views/Ricoveri/Index.cshtml
+++ b/ClinicaVeterinaria/Views/Ricoveri/Index.cshtml
@@ -60,7 +60,7 @@
                 @Html.DisplayFor(modelItem => item.PrezzoTotaleRicovero)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.IdanimaleNavigation.Idanimale)
+                    @Html.DisplayFor(modelItem => item.IdanimaleNavigation.IdAnimale)
             </td>
             <td>
                 <a class="btn btn-info me-2" asp-action="Edit" asp-route-id="@item.IdRicovero">Modifica</a>
