--- a/ClinicaVeterinaria/Views/Animali/Index.cshtml
+++ b/ClinicaVeterinaria/Views/Animali/Index.cshtml
@@ -56,10 +56,10 @@
                         <p class="card-text">@animale.IdUtente</p>
                     </div>
                     <div>
-                        <a class="btn btn-info me-2" asp-action="Edit" asp-route-id="@animale.Idanimale">Modifica</a>
-                        <a class="btn btn-outline-info me-2" asp-action="Details" asp-route-id="@animale.Idanimale">Dettagli</a>
-                        <a class="btn btn-danger me-2" asp-action="Delete" asp-route-id="@animale.Idanimale">Elimina</a>
-                        <button class="btn btn-info cronologia-visite-btn" data-animale-id="@animale.Idanimale">Cronologia delle Visite</button>
+                        <a class="btn btn-info me-2" asp-action="Edit" asp-route-id="@animale.IdAnimale">Modifica</a>
+                        <a class="btn btn-outline-info me-2" asp-action="Details" asp-route-id="@animale.IdAnimale">Dettagli</a>
+                        <a class="btn btn-danger me-2" asp-action="Delete" asp-route-id="@animale.IdAnimale">Elimina</a>
+                        <button class="btn btn-info cronologia-visite-btn" data-animale-id="@animale.IdAnimale">Cronologia delle Visite</button>
                     </div>
                 </div>
             </div>
