--- a/ClinicaVeterinaria/Views/Visite/Details.cshtml
+++ b/ClinicaVeterinaria/Views/Visite/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model ClinicaVeterinaria.Models.ViewModel.VisitaDettagliViewModel
+﻿@model ClinicaVeterinaria.Models.ViewModel.VisitaViewModel
 
 @{
     ViewData["Title"] = "Dettagli Visita";
